# telemetry-peak-analyzer

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  output.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
data/: config.ini.template  telemetry_example_1.json  telemetry_example_2.json
scripts/: anonymize_telemetry.py  create_telemetry.py
src/telemetry_peak_analyzer/: __init__.py  __main__.py
src/telemetry_peak_analyzer/analyzers/: __init__.py
src/telemetry_peak_analyzer/backends/: __init__.py  tina.py
src/telemetry_peak_analyzer/models/: __init__.py
tests/: test_telemetry_peak_analyzer.py
