[metadata]
name = telemetry-peak-analyzer
version = 0.1.4
author = Stefano Ortolani, Jason Zhang
description = Analyzer to detect peaks when analyzing multi-attribute telemetry feeds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware-labs/telemetry-peak-analyzer
project_urls =
    Bug Tracker = https://github.com/vmware-labs/telemetry-peak-analyzer/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Security
    Topic :: System :: Monitoring

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ijson

[options.entry_points]
console_scripts =
    telemetry-peak-analyzer = telemetry_peak_analyzer:parse_and_run_command

[options.extras_require]
tina = tina-client >=0.2.1

[options.packages.find]
where = src
